Lab Assignment 5:
Added 6 card components and a sidebar for each of the three layouts:
guys tops
guys bottoms
girls tops

Created a list for each modified layouts
used ngFor to generate the card components

Couldn't arrange the cards properly while using ngFor loop to generate the cards

Lab assignment 6:

Made the user-info module
wrote code for sending http requests to the firebase server

Lab Assignment 7:

Main features:

Added file store.service.ts to connect to the backend server and created methods for the following classes:
    
    #guys-tops-layout.component.ts
    #guys-bottoms-layout.component.ts
    #girls-tops-layout.component.ts
    #home-layout.component.ts


Added the following attributes to the following class:
    #guys-tops-layout.component.ts
    

    #Attributes added:
        -Implemented the ngOnInit method
        -Removed implementation of lists
        -Connected the class to the backend server to fetch data from there instead
        

Bonus Features:
#Added the same attributes to each of the following classes:
    #guys-bottoms-layout.component.ts
    #girls-tops-layout.component.ts
    #home-layout.component.ts



Lab Assignment 8:

    #Added Features:
        -Configued the Angular Fire library
        -Removed HttpClient dependency
        -Added AngularFireBase dependency
        -Modified code to fetched by FireBase dependency instead of HTTPClient
        -Deployed Website successfully


Lab Assignment 9:

    #Added Features:
        -Added the AddGuysTops component which contains the form
        -Added AddGuysTops method to the store service and connected it to the backend
    