@@ -1,0 +1,34 @@
+import { Component, OnInit } from '@angular/core';
+import { NgForm } from '@angular/forms';
+import { AuthenticationService } from './authentication.service';
+
+@Component({
+  selector: 'hollister-authentication',
+  templateUrl: './authentication.component.html',
+  styleUrls: ['./authentication.component.css']
+})
+export class AuthenticationComponent implements OnInit {
+
+  constructor(private auth:AuthenticationService) { }
+
+  ngOnInit(): void {
+  }
+
+  onSubmit(data:NgForm){
+    console.log("button clicked");
+    console.log(data.value);
+
+    this.auth.signup(data.value.email, data.value.passowrd).subscribe(
+
+      data=> {
+        console.log(data);
+      },
+      error=> {
+        console.log(error);
+      }
+    )
+
+    data.reset();
+  }
+
+}
